--- a/UsuariosApi/appsettings.json
+++ b/UsuariosApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UsuarioConnection": 
+      "server=localhost;database=usuariodb;user=root;password=root"
+  }
 }
