--- a/UsuariosApi/Properties/launchSettings.json
+++ b/UsuariosApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "UsuariosApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7115;http://localhost:5295",
       "environmentVariables": {
