Inicializacao de User Secretes para seguranca das chaves sensiveis do projeto

--- a/UsuariosApi/UsuariosApi.csproj
+++ b/UsuariosApi/UsuariosApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>422f8bea-e39e-4715-b498-094ecd7a8db2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
